# smart-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/smart_api/: __init__.py  config.py  main.py  models.py  ollama.py  services.py
tests/: conftest.py  test_classify.py  test_extract.py  test_summarise.py
